--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Smart Agric</a>
+  <a class="navbar-brand" href="/index">Smart Agric</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,13 +7,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
+        <a class="nav-link" href=""><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Kullanıcı İşlemleri<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/kullanici">Kullanıcı Kayıt<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Cihaz İşlemleri</a>
+        <a class="nav-link active" href="/cihaz">| Cihaz Tanımlama</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/cihaztanim">|  Cihaz Tanımlama Listesi</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/cihazekle">| Cihaz Ekle</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/cihazliste">| Stoktaki Cihazlar</a>
       </li>
     </ul>
 
