--- a/templates/cihaz.html
+++ b/templates/cihaz.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h3>Kullanıcı Kayıt</h3>
+
+<h3>Kullanıcıya Cihaz Tanımla</h3>
 <hr style="border-color:gray;">
+
 <form method="post">
     {% csrf_token %}
     {{form.as_p}}
-    <button type="submit" class="btn btn-danger">Kullanıcıyı Kaydet</button>
-</form>
+    <button type="submit" class="btn btn-danger">Kullanıcıya Cihaz Tanımla</button>
+</form><br>
+
+
 
 {% endblock body %}
