--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
 <div class="jumbotron text-center">
-    <h3>Yazılım Bİlimi BLoğuna HOşgeldiniz</h3>
-    <p>BU blogta geliştiriciler olarak blog yazılarınız gözükür</p>
+    <h3>Smart Agric</h3>
+
 </div>
 
 {% endblock body%}
